--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fast Bootstrap SCSS Template</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="images/logo/favicon.ico">
+    <title>Exsit - Software, SaaS & Startup HTML5 Template</title>
+    <meta name="description" content="Bootstrap Responsive Admin Web Dashboard HTML5 Template">
+    <meta name="keywords" content="html, css, bootstrap, admin template, dashboard, saas, software, responsive">
+    <meta name="author" content="Your Name or Company">
+    <meta name="theme-color" content="#ffffff">
     <link rel="preload" href="css/main.css" as="style">
     <link rel="stylesheet" href="css/main.css" />
 </head>
@@ -16,13 +22,13 @@
             <div class="container">
                 <div class="position-relative d-flex align-items-center justify-content-between w-100">
                     <a class="navbar-brand light-logo logo position-relative" href="index.html">
-                        <img src="images/logo/logo-warning.png" alt="logo" class="logo-light">
+                        <img src="images/logo/logo-warning.png" alt="logo" class="logo-light" width="156" height="50">
                     </a>
                     <div class="menu-overlay"></div>
                     <div class="menu-block p-lg-0 p-3">                            
                         <div class="menu-head align-items-center justify-content-between">
                             <a href="#" class="logo-sub">
-                                <img src="images/logo/logo-warning-black.png" loading="eager" alt="logo">
+                                <img src="images/logo/logo-warning-black.png" loading="eager" alt="logo" width="156" height="50">
                             </a>
                             <div class="menu-close">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
@@ -96,7 +102,7 @@
                                         <div class="d-none d-lg-flex">
                                             <div class="w-100 h-100 d-flex flex-column menu-banner-orange rounded-4 p-4">
                                                 <h4 class="fs-14 ls-1 fw-500 text-gray-900 text-uppercase mb-1">Explore more</h4>
-                                                <img loading="lazy" src="assets/images/menu-right-banner-1.webp" alt="banner" class="my-3">
+                                                <img loading="lazy" src="images/menu-right-banner-1.webp" alt="banner" class="my-3">
                                                 <a href="blog-1.html" class="fw-500 text-warning">
                                                     See more content
                                                     <svg viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class=""><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
@@ -139,6 +145,53 @@
         </nav>
     </header>
     <!-- header wrap -->
+    <!-- banner wrap -->
+    <div class="banner-wrapper position-relative overflow-hidden startup-banner">
+        <div class="banner-wrapper-image position-absolute top-0">
+            <img loading="eager" src="images/banner-bg-9.webp" alt="banner" class="w-100">
+        </div>
+        <div class="container h-100">
+            <div class="row h-100">
+                <div class="col-lg-7 font-dm d-flex flex-column">
+                    <div class="d-flex flex-row mb-3 mt-auto">
+                        <div class="d-flex flex-row gap-2 py-2 px-3 rounded-pill w-auto" style="background: rgba(255, 255, 255, 0.2);">
+                            <div class="d-flex flex-row gap-1 my-1">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-star-fill text-warning" viewBox="0 0 16 16">
+                                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"></path>
+                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-star-fill text-warning" viewBox="0 0 16 16">
+                                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"></path>
+                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-star-fill text-warning" viewBox="0 0 16 16">
+                                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"></path>
+                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-star-fill text-warning" viewBox="0 0 16 16">
+                                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"></path>
+                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-star-fill text-gray-500" viewBox="0 0 16 16">
+                                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"></path>
+                                </svg>
+                            </div>
+                            <h5 class="text-white fw-500 fs-15 my-1">4.5 { 2.3k + Reviews }</h5>
+                        </div>
+                    </div>
+                    <h1 class="text-white display6-size fw-500">Effortlessly Growth Organize <span class="d-inline-block rounded-4 bg-gradient-orange px-3">Product</span> Management</h1>
+                    <p class="fw-400 text-gray-100 w-lg-75 lh-28 pe-xl-5 mt-0 mb-4 py-xl-3">When you join our journey, you are choosing a partner who believes in a healthier, more balanced you — and works tirelessly to help you get there.</p>
+                    <div class="d-flex flex-sm-row flex-column gap-sm-3 gap-2 ">
+                        <a href="#" class="btn bg-orange btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-warning border-0">
+                            <span>Start trial for 14 days</span>
+                            <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
+                        </a>
+                        <a href="#" class="btn bg-gray-100 btn-lg rounded-2 px-4 text-gray-900 mb-1">
+                            Explore more
+                        </a>
+                    </div>
+                    <p class="fs-14 text-gray-400 fw-400 mb-auto mt-1 pb-lg-5">No Card Required  Cancel Anytime</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- banner wrap -->
     <!-- footer wrap -->
     <footer class="footer-wrap bg-gray-900 text-gray-100 dark-footer font-dm">
         <div class="container pb-0">
