--- a/src/home-two.html
+++ b/src/home-two.html
@@ -13,6 +13,9 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="preload" href="css/main.css" as="style">
     <link rel="stylesheet" href="css/main.css" />
+    <!-- Preload Hero Image -->
+
+    <link rel="preload" as="image" href="images/banner-bg-9.webp" type="image/webp" fetchpriority="high">
 </head>
 
 <body>
@@ -192,6 +195,121 @@
         </div>
     </div>
     <!-- banner wrap -->
+    <!-- blog wrap -->
+    <div class="blog-wrap py-100 bg-white font-dm overflow-hidden">
+        <div class="container">
+            <div class="row pb-65 justify-content-between gy-3 gy-lg-0">
+                <div class="col-lg-5 text-start">
+                    <h2 class="display5-size text-gray-900 fw-600 mb-lg-2 mb-1" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">Recent blog & articles about technology</h2>
+                    <p class="text-gray-700 fw-400 pe-lg-5 mb-0" data-aos="fade-up" data-aos-duration="400" data-aos-delay="400">Genuine feedback from those who know us best.</p>
+                </div>
+                <div class="col-lg-6 d-flex">
+                    <div class="mt-auto ms-lg-auto">
+                        <a href="#" data-aos="fade-left" data-aos-duration="400" data-aos-delay="400" class="btn bg-orange btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-warning border-0">
+                            <span>Explore more</span>
+                            <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row gy-3">
+                <div class="col-lg-6" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
+                    <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
+                        <div class="post-image overflow-hidden"><img loading="lazy" src="images/blog-4.webp" alt="blog" class="w-100 img-fluid scale-img"></div>
+                        <div class="post-content p-3">
+                            <div class="d-flex flex-column px-1">
+                                <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2 fw-500">
+                                    <span>4 hours ago</span>
+                                    <span class="mx-1">•</span>
+                                    <span>27 min read</span>
+                                </div>
+                                <h2 class="display4-size text-gray-900 fw-600 mb-1">Our personalized lessons are design   to inspire growth balance.</h2>
+                                <p class="text-gray-900 fw-400 text-gray-700 mt-1 pe-lg-5">Whether you're building a startup landing page, a dashboard interface, or a modern web app gives you full control .</p>
+                                <div class="d-flex flex-row gap-3 mt-0">
+                                    <img loading="lazy" src="images/avatars/avater-12.webp" alt="avater" class="w-11 h-11 rounded-circle">
+                                    <div class="d-flex flex-column">
+                                        <span class="fs-16 text-gray-900 fw-500 lh-20 d-inline-block">Henry Deo</span>
+                                        <span class="fs-14 text-gray-600 fw-400 lh-20 d-inline-block">Founder and ceo of exsit</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-6 gap-4 d-flex flex-column">
+                    <div class="article" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
+                        <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
+                            <div class="row">
+                                <div class="col-lg-4 pe-0">
+                                    <div class="post-image overflow-hidden h-100"><img loading="lazy" src="images/blog-1.webp" alt="blog" class="object-fit-cover h-100 w-100 scale-img"></div>
+                                </div>
+                                <div class="col-lg-8 ps-0">
+                                    <div class="post-content p-3">
+                                        <div class="d-flex flex-column px-1">
+                                            <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2 fw-500">
+                                                <span>5 hours ago</span>
+                                                <span class="mx-1">•</span>
+                                                <span>12 min read</span>
+                                            </div>
+                                            <h2 class="display3-size text-gray-900 fw-600 mb-1 pe-lg-4">One-piece garments top and shorts providing comfort.</h2>
+                                            <p class="text-gray-900 fw-400 text-gray-700 mt-1 pe-lg-5 mb-2">More balanced you — and works tirelessly to help you get there.</p>                                                
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="article" data-aos="fade-up" data-aos-duration="400" data-aos-delay="300">
+                        <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
+                            <div class="row">
+                                <div class="col-lg-4 pe-0">
+                                    <div class="post-image overflow-hidden h-100"><img loading="lazy" src="images/blog-2.webp" alt="blog" class="object-fit-cover h-100 w-100 scale-img"></div>
+                                </div>
+                                <div class="col-lg-8 ps-0">
+                                    <div class="post-content p-3">
+                                        <div class="d-flex flex-column px-1">
+                                            <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2 fw-500">
+                                                <span>3 hours ago</span>
+                                                <span class="mx-1">•</span>
+                                                <span>22 min read</span>
+                                            </div>
+                                            <h2 class="display3-size text-gray-900 fw-600 mb-1 pe-lg-4">The post-pandemic consumer is a embracing clothes.</h2>
+                                            <p class="text-gray-900 fw-400 text-gray-700 mt-1 pe-lg-5 mb-2">More balanced you — and works tirelessly to help you get there.</p>                                                
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="article" data-aos="fade-up" data-aos-duration="400" data-aos-delay="400">
+                        <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden d-flex flex-column shadow-hover-lg">
+                            <div class="row">
+                                <div class="col-lg-4 pe-0">
+                                    <div class="post-image overflow-hidden h-100"><img loading="lazy" src="images/blog-3.webp" alt="blog" class="object-fit-cover h-100 w-100 scale-img"></div>
+                                </div>
+                                <div class="col-lg-8 ps-0">
+                                    <div class="post-content p-3">
+                                        <div class="d-flex flex-column px-1">
+                                            <div class="article-tag d-flex flex-row text-gray-600 fs-14 mb-2 fw-500">
+                                                <span>2 hours ago</span>
+                                                <span class="mx-1">•</span>
+                                                <span>13 min read</span>
+                                            </div>
+                                            <h2 class="display3-size text-gray-900 fw-600 mb-1 pe-lg-4">As people move out of big cities, fashion retail follows</h2>
+                                            <p class="text-gray-900 fw-400 text-gray-700 mt-1 pe-lg-5 mb-2">More balanced you — and works tirelessly to help you get there.</p>                                                
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- blog wrap -->
     <!-- footer wrap -->
     <footer class="footer-wrap bg-gray-900 text-gray-100 dark-footer font-dm">
         <div class="container pb-0">
