--- a/src/home-two.html
+++ b/src/home-two.html
@@ -708,7 +708,7 @@
     <!-- feature wrap -->
     <!-- feedback wrap -->
     <div class="feedback-wrap mx-lg-5">
-        <div class="w-100 py-100 rounded-5" style="background-image: url(assets/images/banner-bg-7.webp);">
+        <div class="w-100 py-100 rounded-5" style="background-image: url(images/banner-bg-7.webp);">
             <div class="container">
                 <div class="row justify-content-center pb-65">
                     <div class="col-lg-7 text-center">
