--- a/src/home-two.html
+++ b/src/home-two.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +11,11 @@
     <meta name="author" content="Your Name or Company">
     <meta name="theme-color" content="#ffffff">
     <link rel="preload" href="css/main.css" as="style">
+    <!-- MAIN CSS -->
     <link rel="stylesheet" href="css/main.css" />
+    <!-- Splide slider css -->
+    <link rel="stylesheet" href="css/splideslider.css" />
     <!-- Preload Hero Image -->
-
     <link rel="preload" as="image" href="images/banner-bg-9.webp" type="image/webp" fetchpriority="high">
 </head>
 
