--- a/src/single-blog-2.html
+++ b/src/single-blog-2.html
@@ -557,7 +557,7 @@
 
         
     <!-- loader js -->
-    <script src="js/loader.js"></script>
+    <script src="js/main.js"></script>
 
 
 </body>
