--- a/src/about.html
+++ b/src/about.html
@@ -183,11 +183,11 @@
                 <div class="container">
                     <div class="row g-4 pb-65">
                         <div class="col-lg-6" data-aos="zoom-in" data-aos-duration="400" data-delay="00">
-                            <img src="images/about-5.webp" alt="banner" class="object-fit-cover w-100 rounded-4" loading="lazy">
+                            <img src="images/about-5.webp" alt="banner" class="object-fit-cover w-100 rounded-4" loading="eager">
                         </div>
                         <div class="col-lg-6">
                             <div class="" data-aos="zoom-in" data-aos-duration="400" data-delay="00">
-                                <img src="images/about-6.webp" alt="banner" class="object-fit-cover w-100 rounded-4" loading="lazy">
+                                <img src="images/about-6.webp" alt="banner" class="object-fit-cover w-100 rounded-4" loading="eager">
                             </div>
                             <div data-aos="fade-up" data-aos-delay="200" data-aos-duration="400" class="mt-4">
                                 <div class="font-dm bg-gray-200 border border-gray-200 rounded-4 p-4 bg-gradient-cyan-blue d-flex flex-column" style="height: 265px;">
