--- a/src/home-four.html
+++ b/src/home-four.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/main.css" />
     <!-- Splide slider css -->
     <link rel="stylesheet" href="css/splideslider.css" />
+    <!-- preload image -->
+    <link rel="preload" as="image" href="images/banner-bg-10.webp" type="image/webp" fetchpriority="high">
 </head>
 
 <body>
@@ -206,7 +208,7 @@
         <!-- banner wrap -->
 
         <!-- counter wrap -->
-        <div class="connter-wrap py-5 font-dm">
+        <div class="connter-wrap py-5 font-sora">
             <div class="container">
                 <div class="row gy-5 py-lg-4" id="exsit-counter">
                     <div class="col-lg-4 text-center d-flex flex-column" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="0">
@@ -292,7 +294,7 @@
                     </div>
                     <div class="col-lg-4" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">
                         <div class="d-flex flex-column p-5 text-center rounded-4 h-345 font-sora" style="background:linear-gradient(to bottom, #034651, #30919F); ">
-                            <h2 class="display6-size text-darkgreen mt-3 mb-5 fw-500 ls-5 font-dm">22.5<span class="display5-size">M</span></h2>
+                            <h2 class="display6-size text-darkgreen mt-3 mb-5 fw-500 ls-5 font-sora">22.5<span class="display5-size">M</span></h2>
                             <h3 class="display2-size text-white fw-500">Ad Spend vs. ROI</h3>
                             <p class="text-gray-200 fw-300">Supported, and appreciated brand <br> i can truly rely on.</p>
                         </div>
