--- a/src/home-one.html
+++ b/src/home-one.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <!-- Splide slider css -->
     <link rel="stylesheet" href="css/splideslider.css" />
-
+    <!-- preload image -->
     <link rel="preload" as="image" href="images/home-1/right-banner-bg.webp" type="image/webp" fetchpriority="high">
     
     
