--- a/src/home-three.html
+++ b/src/home-three.html
@@ -192,7 +192,7 @@
                             <h1 class="text-white display6-size fw-600 lh-1">Enterprises and Startup Build Powerful  — <span class="text-gradient">Digital Solutions</span></h1>
                             <p class="fw-400 text-gray-300 lh-28 mt-0 mb-3 py-lg-3 w-lg-75 text-center mx-auto">When you join our journey, you are choosing a partner who believes in a healthier. When you join our journey. Quizzes are working for them — and they can for you too.</p>
                             <div class="d-flex flex-sm-row justify-content-center flex-column gap-sm-3 gap-2 pb-0">
-                                <a href="#" class="btn bg-cyan btn-lg rounded-2 px-4 text-white mb-1">
+                                <a href="#" class="btn bg-cyan btn-lg rounded-2 px-4 text-gray-900 mb-1">
                                     Start trial for 14 days
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
@@ -395,7 +395,7 @@
                         <div class="col-lg-6 ps-lg-5">
                             <div class="d-flex flex-column ps-lg-4">
                                 <h2 class="display5-size text-gray-900 fw-600 mb-lg-3 mb-2" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400" >We craft premium designs for agencies and global brands</h2>
-                                <div class="accordion d-flex flex-column gap-0 mt-4" id="faqAccordion">
+                                <div class="accordion d-flex flex-column gap-0 mt-4" id="faqAccordion" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
                                     <div class="accordion-item border-gray-200 border-0 border-bottom border-2 rounded-0 bg-transparent">
                                         <h2 class="accordion-header" id="headingOne">
                                             <button class="accordion-button shadow-none lh-30 display1-size px-0 text-gray-900 fw-500 rounded-0 bg-transparent border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -655,7 +655,7 @@
                                                         <span class="text-white fs-16 fw-400 ms-1 d-inline-block lh-22 pb-1">4.5</span>
                                                     </div>
                                                     <div>
-                                                        <h4 class="text-gray-200 fw-400 fst-italic lh-7 mb-5">Incredible experience from start to finish. The team is responsive, professional, and genuinely cares about customer satisfaction i always feel heard, supported, and appreciated.</h4>
+                                                        <span class="text-gray-200 fw-400 fst-italic lh-7 h4 d-inline-block mb-5">Incredible experience from start to finish. The team is responsive, professional, and genuinely cares about customer satisfaction i always feel heard, supported, and appreciated.</span>
                                                     </div>
                                                     <div class="d-flex flex-column">
                                                         <span class="fs-16 text-white fw-500 lh-22 d-inline-block">Goria Coast</span>
@@ -691,7 +691,7 @@
                                                         <span class="text-white fs-16 fw-400 ms-1 d-inline-block lh-22 pb-1">4.5</span>
                                                     </div>
                                                     <div>
-                                                        <h4 class="text-gray-200 fw-400 fst-italic lh-7 mb-5">Being a member has real benefits. I always feel heard, supported, and appreciated. A brand I can truly rely on. Top-notch service. They go above and beyond to meet expectations.</h4>
+                                                        <span class="text-gray-200 h4 d-inline-block fw-400 fst-italic lh-7 mb-5">Being a member has real benefits. I always feel heard, supported, and appreciated. A brand I can truly rely on. Top-notch service. They go above and beyond to meet expectations.</span>
                                                     </div>
                                                     <div class="d-flex flex-column">
                                                         <span class="fs-16 text-white fw-500 lh-22 d-inline-block">Henry Deo</span>
@@ -729,14 +729,14 @@
                             </div>
                         </div>
                         <div class="col-lg-6 d-flex flex-column gap-4 ps-lg-5">
-                            <div class="accordion d-flex flex-column gap-3" id="faqAccordion">
+                            <div class="accordion d-flex flex-column gap-3" id="faqAccordionTwo">
                                 <div class="accordion-item border border-gray-100 rounded-4 box-shadow-light-cyan" data-aos="fade-up" data-aos-delay="100" data-aos-duration="400">
-                                    <h2 class="accordion-header" id="headingOne">
-                                        <button class="accordion-button lh-30 collapsed display1-size text-gray-900 fw-500 bg-white rounded-3 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    <h2 class="accordion-header" id="headingeleven">
+                                        <button class="accordion-button lh-30 collapsed display1-size text-gray-900 fw-500 bg-white rounded-3 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven">
                                             Q1. What Is The Design Process For Branding?
                                         </button>
                                     </h2>
-                                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+                                    <div id="collapseEleven" class="accordion-collapse collapse show" aria-labelledby="headingeleven" data-bs-parent="#faqAccordionTwo">
                                     <div class="accordion-body">
                                         <p class="text-gray-800 fs-16 lh-30 mb-0 pe-lg-4">Our design services starts and ends with a best-in-class experience strategy that builds brands. When you join our journey, you are choosing a partner who believes in a healthier, more balanced you.</p>
                                     </div>
@@ -744,12 +744,12 @@
                                 </div>
 
                                 <div class="accordion-item border border-gray-100 rounded-4 box-shadow-light-cyan" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
-                                    <h2 class="accordion-header" id="headingTwo">
-                                    <button class="accordion-button lh-30 collapsed display1-size text-gray-900 fw-500 bg-white rounded-3 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    <h2 class="accordion-header" id="headingTwelve">
+                                    <button class="accordion-button lh-30 collapsed display1-size text-gray-900 fw-500 bg-white rounded-3 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
                                         Q2. How Much Does Logo Design Services Cost?
                                     </button>
                                     </h2>
-                                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
+                                    <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve" data-bs-parent="#faqAccordionTwo">
                                     <div class="accordion-body">
                                         <p class="text-gray-800 fs-16 lh-30 mb-0">No, we do not take a cut of your revenue. You keep 100% of what you earn. Every design begins and ends with strategy — because great brands are not built by accident.</p>
                                     </div>
@@ -757,12 +757,12 @@
                                 </div>
 
                                 <div class="accordion-item border border-gray-100 rounded-4 box-shadow-light-cyan" data-aos="fade-up" data-aos-delay="300" data-aos-duration="400">
-                                    <h2 class="accordion-header" id="headingThree">
-                                    <button class="accordion-button lh-30 collapsed display1-size text-gray-900 fw-500 bg-white rounded-3 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    <h2 class="accordion-header" id="headingThirteen">
+                                    <button class="accordion-button lh-30 collapsed display1-size text-gray-900 fw-500 bg-white rounded-3 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
                                         Q3. How Long Will It Take To Complete My Project?
                                     </button>
                                     </h2>
-                                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
+                                    <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen" data-bs-parent="#faqAccordionTwo">
                                     <div class="accordion-body">
                                         <p class="text-gray-800 fs-16 lh-30 mb-0">Yes, you can cancel your subscription anytime — no questions asked. We start and finish every design project with a world-class experience strategy that builds lasting brands.</p>
                                     </div>
@@ -770,12 +770,12 @@
                                 </div>
 
                                 <div class="accordion-item border border-gray-100 rounded-4 box-shadow-light-cyan" data-aos="fade-up" data-aos-delay="400" data-aos-duration="400">
-                                    <h2 class="accordion-header" id="headingFour">
-                                    <button class="accordion-button lh-30 collapsed display1-size text-gray-900 fw-500 bg-white rounded-3 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    <h2 class="accordion-header" id="headingFourteen">
+                                    <button class="accordion-button lh-30 collapsed display1-size text-gray-900 fw-500 bg-white rounded-3 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
                                         Q4. What Is Included In A Round Of Revisions?
                                     </button>
                                     </h2>
-                                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqAccordion">
+                                    <div id="collapseFourteen" class="accordion-collapse collapse" aria-labelledby="headingFourteen" data-bs-parent="#faqAccordionTwo">
                                     <div class="accordion-body">
                                         <p class="text-gray-800 fs-16 lh-30 mb-0">Yes, you can cancel your subscription anytime — no questions asked. We start and finish every design project with a world-class experience strategy that builds lasting brands.</p>
                                     </div>
