--- a/src/home-five.html
+++ b/src/home-five.html
@@ -54,7 +54,7 @@
                                     <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
                                 </div>
                             </div>
-                            <ul class="navbar-nav gap-3 text-white fw-600" id="navbar-main">
+                            <ul class="navbar-nav font-sora gap-3 text-white fw-600" id="navbar-main">
                                 <li class="nav-item nav-item-has-children">
                                     <a class="nav-link text-gray-900" href="#">Demo <svg viewBox="0 0 24 24" width="18" height="18" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg></a>
                                     <ul class="sub-menu" id="submenu-1">
@@ -329,9 +329,9 @@
                         <div class="splide slider-no-dots" id="main-carousel">
                             <div class="splide__track overflow-visible">
                                 <div class="splide__list">
-                                    <div class="splide__slide"><img src="images/about-1.webp" alt="banner" class="rounded-4 w-100" loading="lazy"></div>
-                                    <div class="splide__slide"><img src="images/about-2.webp" alt="banner" class="rounded-4 w-100" loading="lazy"></div>
-                                    <div class="splide__slide"><img src="images/about-3.webp" alt="banner" class="rounded-4 w-100" loading="lazy"></div>
+                                    <div class="splide__slide"><img src="images/about-1.webp" width="1350" height="520" alt="banner" class="rounded-4 w-100 img-fluid" loading="lazy"></div>
+                                    <div class="splide__slide"><img src="images/about-2.webp" width="1350" height="520" alt="banner" class="rounded-4 w-100 img-fluid" loading="lazy"></div>
+                                    <div class="splide__slide"><img src="images/about-3.webp" width="1350" height="520" alt="banner" class="rounded-4 w-100 img-fluid" loading="lazy"></div>
                                 </div>
                             </div>
                         </div>
