--- a/src/home-two.html
+++ b/src/home-two.html
@@ -49,7 +49,7 @@
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
                             </div>
                         </div>
-                        <ul class="navbar-nav gap-3 text-white fw-600" id="navbar-main">
+                        <ul class="navbar-nav font-dm gap-3 text-white fw-600" id="navbar-main">
                             <li class="nav-item nav-item-has-children">
                                 <a class="nav-link text-white fw-500" href="#">Demo <svg viewBox="0 0 24 24" width="18" height="18" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg></a>
                                 <ul class="sub-menu" id="submenu-1">
