--- a/src/about.html
+++ b/src/about.html
@@ -209,7 +209,7 @@
                                         <h3 class="display6-size fw-500 text-gray-900 mb-1" style="font-size: 75px;">30x</h3>
                                         <p class="text-gray-900 display2-size fw-400 pe-2 fst-italic w-lg-75 mb-0">Genuine feedback those who know us best.</p>
                                     </div>
-                                    <div class="position-absolute end-0 bottom-5"><svg viewBox="0 0 24 24" width="150" height="150" stroke="currentColor" stroke-width="0.35" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 text-gray-900 opacity-50"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg></div>
+                                    <div class="position-absolute end-0 bottom-5 d-none d-lg-flex"><svg viewBox="0 0 24 24" width="150" height="150" stroke="currentColor" stroke-width="0.35" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 text-gray-900 opacity-50"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg></div>
                                 </div>
                             </div>
                         </div>
