--- a/src/home-five.html
+++ b/src/home-five.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/main.css" />
     <!-- Splide slider css -->
     <link rel="stylesheet" href="css/splideslider.css" />
+    <!-- preload image -->
+    <link rel="preload" as="image" href="images/banner-bg-2.webp" type="image/webp" fetchpriority="high">
 </head>
 
 <body>
