--- a/src/home-three.html
+++ b/src/home-three.html
@@ -143,7 +143,7 @@
                             </div>
                         </div>
                         
-                        <div class="d-flex items-center gap-3">
+                        <div class="d-flex items-center gap-3 font-sora">
                             <button aria-label="search" class="btn btn-outline text-gray-700 p-0">
                                 <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
                             </button>
