--- a/src/home-four.html
+++ b/src/home-four.html
@@ -10,6 +10,11 @@
     <meta name="keywords" content="html, css, bootstrap, admin template, dashboard, saas, software, responsive">
     <meta name="author" content="Your Name or Company">
     <meta name="theme-color" content="#ffffff">
+    <!-- Font -->
+    <link rel="preload" href="fonts/Sora-400.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/Sora-500.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/Sora-600.woff2" as="font" type="font/woff2" crossorigin>
+
     <link rel="preload" href="css/main.css" as="style">
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="css/main.css" />
@@ -17,6 +22,7 @@
     <link rel="stylesheet" href="css/splideslider.css" />
     <!-- preload image -->
     <link rel="preload" as="image" href="images/banner-bg-10.webp" type="image/webp" fetchpriority="high">
+    
 </head>
 
 <body>
