--- a/src/contact.html
+++ b/src/contact.html
@@ -172,7 +172,7 @@
                             </div>
                         </div>
                         <h2 class="display6-size text-gray-900 fw-700 mb-lg-2 mb-1 mt-3 lh-5" data-aos="fade-up" data-aos-duration="200">Get in touch with our team</h2>
-                        <p class="text-gray-700 fw-400 pe-lg-5" data-aos="fade-up" data-aos-duration="300">Genuine feedback from those who know us best.</p>
+                        <p class="text-gray-700 fw-400" data-aos="fade-up" data-aos-duration="300">Genuine feedback from those who know us best.</p>
                     </div>
                 </div>
             </div>
