--- a/src/home-three.html
+++ b/src/home-three.html
@@ -391,9 +391,9 @@
         <div class="service-wrap font-sora">
             <div class="maxw-1250 mx-auto">
                 <div class="container">
-                    <div class="row gy-4">
+                    <div class="row gy-4 pb-100">
                         <div class="col-lg-6">
-                            <div class="overflow-hidden rounded-5 image-zoom-onhover" data-aos="fade-up" data-aos-delay="100" data-aos-duration="400">
+                            <div class="overflow-hidden rounded-5 image-zoom-onhover" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="400">
                                 <img src="images/auth-bg-1.webp" loading="lazy" alt="banner" class="w-100 img-fluid object-fit-contain rounded-5">
                             </div>
                         </div>
@@ -467,6 +467,37 @@
                                     </div>
                                     
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">                        
+                        <div class="col-lg-6">
+                            <div class="d-flex flex-column pe-lg-5">
+                                <h2 class="display5-size text-gray-900 fw-600 mb-lg-3 mb-2" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400" >We deliver exquisite catering for intimate gatherings.</h2>
+                                <p class="text-gray-800 mb-4 mt-1 fs-16 lh-30 pe-lg-5" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">Whether you're building a startup landing page, a dashboard interface, or a modern web app, Exsit gives you full control over the look and feel of your site  because great brands are not built by accident.</p>
+                                <p class="text-gray-700 mb-2 fs-16 d-flex flex-row align-items-center gap-2" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-cyan" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path></svg>
+                                    Do you have a discount for students, academics
+                                </p>
+                                <p class="text-gray-700 mb-2 fs-16 d-flex flex-row align-items-center gap-2" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-cyan" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path></svg>
+                                    What happens if we cancel our subscription?
+                                </p>
+                                <p class="text-gray-700 mb-2 fs-16 d-flex flex-row align-items-center gap-2" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-cyan" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path></svg>
+                                    Can I have a proposal I can with my team?
+                                </p>
+                                <div>
+                                    <a href="#" class="btn bg-cyan btn-lg rounded-2 px-4 mt-4 text-gray-900 mb-1 btn-hover-bg-lighten-cyan" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                                        <span>Check out more</span>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="overflow-hidden rounded-5 image-zoom-onhover" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="400">
+                                <img src="images/about-7.webp" loading="lazy" alt="banner" class="w-100 img-fluid object-fit-contain rounded-5">
                             </div>
                         </div>
                     </div>
