--- a/src/about.html
+++ b/src/about.html
@@ -236,7 +236,7 @@
             </div>
         </div>
         <!-- counter wrap -->
-        <div class="counter-wrap py-100 bg-lightgreen font-sora">
+        <div class="counter-wrap py-100 bg-lightgreen">
             <div class="container">
                 <div class="row pb-65 justify-content-center">
                     <div class="col-lg-7 text-center">
