--- a/src/home-four.html
+++ b/src/home-four.html
@@ -745,7 +745,7 @@
                         </div>
                     </div>
                     <div class="row gy-4">
-                        <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="0" data-aos-duration="300">
+                        <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="0" data-aos-duration="300">
                             <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                                 <div class="post-image scale-img overflow-hidden"><img src="images/blog-1.webp" alt="blog" loading="lazy"></div>
                                 <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
@@ -765,7 +765,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="400">
+                        <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="400">
                             <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                                 <div class="post-image scale-img overflow-hidden"><img src="images/blog-3.webp" alt="blog" loading="lazy"></div>
                                 <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
@@ -785,7 +785,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="500">
+                        <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="500">
                             <a href="blog-single-1.html" class="border border-gray-200 rounded-4 overflow-hidden font-sora d-flex flex-column shadow-hover-lg">
                                 <div class="post-image scale-img overflow-hidden"><img src="images/blog-2.webp" alt="blog" loading="lazy"></div>
                                 <div class="post-content d-flex flex-column p-3 bg-white overflow-hidden z-5">
