--- a/src/home-two.html
+++ b/src/home-two.html
@@ -409,7 +409,7 @@
                 <div class="row pb-65">
                     <div class="col-lg-6">
                         <div class="pe-lg-5 w-lg-75" data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">
-                            <h3 class="text-gray-900 fw-600 display4-size mt-3">Deliver experiences that truly delight the customer keep track your app.</h3>
+                            <h3 class="text-gray-900 fw-600 display4-size">Deliver experiences that truly delight the customer keep track your app.</h3>
                         </div>
                     </div>
                     <div class="col-lg-6 pe-lg-5">
@@ -424,7 +424,7 @@
 
                     </div>
                 </div>
-                <div class="row gy-4" id="exsit-counter">
+                <div class="row gy-4 pb-100" id="exsit-counter">
                     <div class="col-lg-6" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="200">
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-4"><h3 class="text-gray-900 mb-0 display5-size fw-600"><span data-percentage="22.5" class="exsit-counter"></span>k</h3></div>
@@ -448,6 +448,112 @@
                         </div>
                     </div>
                 </div>
+                <div class="row justify-content-center pb-65">
+                    <div class="col-lg-7 font-sora text-center">
+                        <h2 class="display5-size text-gray-900 fw-600 mb-lg-3 mb-2" data-aos="fade-up" data-aos-duration="400" data-aos-delay="0">Built to scale with flexible pricing with your need</h2>
+                        <p class="text-gray-800 " data-aos="fade-up" data-aos-duration="400" data-aos-delay="100">A healthier you — and works tirelessly to help you achieve it.</p>
+                    </div>
+                </div>
+                <div class="row justify-content-center font-dm">
+                    <div class="col-lg-8">
+                        <div class="price-wrap p-3 rounded-4 bg-white">
+                            <div class="row">
+                                <div class="col-lg-6" data-aos="zoom-in" data-aos-duration="400" data-aos-delay="0">
+                                    <div class="d-flex flex-column p-4 bg-white rounded-4 gap-4">
+                                        <div>
+                                            <h3 class="fw-600 text-gray-900 display4-size mb-3">Startup</h3>
+                                            <p class="text-gray-800 mt-1">Best for startup business owners who needs for business.</p>
+                                        </div>
+                                        <h4 class="display5-size fw-700 text-gray-900 lh-1 mb-0"><span class="price" data-monthly="29" data-annually="299">$29</span><span class="fs-16 fw-500 text-gray-700 d-inline-block lh-1 ls-1"> / month</span></h4>
+                                        
+                                        <div>
+                                            <p class="text-gray-700 fw-500 mb-2 fs-16 d-flex flex-row align-items-center gap-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-warning" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
+                                                </svg>
+                                                10 GB disk space availability
+                                            </p>
+                                            <p class="text-gray-700 fw-500 mb-2 fs-16 d-flex flex-row align-items-center gap-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-warning" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
+                                                </svg>
+                                                50 GB NVMe SSD for use
+                                            </p>
+                                            <p class="text-gray-700 fw-500 mb-2 fs-16 d-flex flex-row align-items-center gap-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-warning" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
+                                                </svg>
+                                                Free platform access for all
+                                            </p>
+                                            <p class="text-gray-700 fw-500 mb-2 fs-16 d-flex flex-row align-items-center gap-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-warning" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
+                                                </svg>
+                                                Lifetime updates facility
+                                            </p>
+                                            <p class="text-gray-700 fw-500 mb-2 fs-16 d-flex flex-row align-items-center gap-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-warning" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
+                                                </svg>
+                                                One year support
+                                            </p>
+                                        </div>
+                                        <a href="#" class="btn bg-gray-900 btn-lg rounded-2 text-white btn-hover-bg-darken-dark border-0 my-2">
+                                            <span>Get Start</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6" data-aos="zoom-in" data-aos-duration="400" data-aos-delay="0">
+                                    <div class="d-flex flex-column p-4 bg-gray-200 rounded-4 gap-4">
+                                        <div>
+                                            <h3 class="fw-600 text-gray-900 display4-size mb-3">
+                                                Enterprise
+                                            </h3>
+                                            <p class="text-gray-800 mt-1">Perfect for new professional needing essential tools for growth.</p>
+                                        </div>
+                                        <h4 class="display5-size fw-700 text-gray-900 lh-1 mb-0"><span class="price" data-monthly="29" data-annually="299">$99</span><span class="fs-16 fw-500 text-gray-700 d-inline-block lh-1 ls-1"> / month</span></h4>
+                                        
+                                        <div>
+                                            <p class="text-gray-700 fw-500 mb-2 fs-16 d-flex flex-row align-items-center gap-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-warning" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
+                                                </svg>
+                                                10 GB disk space availability
+                                            </p>
+                                            <p class="text-gray-700 fw-500 mb-2 fs-16 d-flex flex-row align-items-center gap-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-warning" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
+                                                </svg>
+                                                50 GB NVMe SSD for use
+                                            </p>
+                                            <p class="text-gray-700 fw-500 mb-2 fs-16 d-flex flex-row align-items-center gap-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-warning" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
+                                                </svg>
+                                                Free platform access for all
+                                            </p>
+                                            <p class="text-gray-700 fw-500 mb-2 fs-16 d-flex flex-row align-items-center gap-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-warning" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
+                                                </svg>
+                                                Lifetime updates facility
+                                            </p>
+                                            <p class="text-gray-700 fw-500 mb-2 fs-16 d-flex flex-row align-items-center gap-2">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-check-circle-fill text-warning" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"></path>
+                                                </svg>
+                                                One year support
+                                            </p>
+                                        </div>
+                                        <a href="#" class="btn bg-warning btn-lg rounded-2 text-gray-900 btn-hover-bg-darken-warning border-0 my-2">
+                                            <span>Start trial for 14 days</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -462,7 +568,7 @@
                         <p class="text-gray-800 mb-0" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="400">More balanced you — and works tirelessly to help you get there.</p>
                     </div>
                 </div>
-                <div class="row justify-content-center ">
+                <div class="row justify-content-center" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="200">
                     <!-- Tab Navigation -->
                     <div class="col-12 d-flex justify-content-center pb-65">
                         <ul class="nav nav-tabs nav-tabs-outline p-1 bg-gray-100 border border-gray-200 rounded-4 d-flex flex-row" id="myTab" role="tablist">
