--- a/src/shop-2.html
+++ b/src/shop-2.html
@@ -231,8 +231,8 @@
                             <h3 class="fs-16 fw-600 text-gray-900 mb-2">Size</h3>
                             <div class="size-item d-flex flex-row justify-content-between align-items-center">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="S" id="size-s">
-                                    <label class="form-check-label form-label mb-0" for="size-s">Extra Small (XS)</label>
+                                    <input class="form-check-input" type="checkbox" value="S" id="size-xs">
+                                    <label class="form-check-label form-label mb-0" for="size-xs">Extra Small (XS)</label>
                                 </div>
                                 <span class="item-count fs-14 text-gray-600 fw-500">22</span>
                             </div>
