--- a/src/home-one.html
+++ b/src/home-one.html
@@ -204,7 +204,7 @@
                                 class="img-fluid"
                             />
                             <div class="w-100 bottom-0 z-5 start-0 m-4 d-flex flex-column position-absolute">
-                                <div id="vertical-carousel" class="splide overflow-hidden vertical-sldier h-135" aria-label="Vertical Splide">
+                                <div id="vertical-carousel" class="splide overflow-hidden vertical-sldier h-135">
                                     <div class="splide__track">
                                         <ul class="splide__list">
                                             <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Affordable & scalable plans </span></li>
@@ -266,7 +266,7 @@
                 <div class="row g-4">
                     <div data-aos="fade-up" data-aos-delay="0" data-aos-duration="400" class="col-lg-8">
                         <!-- Splide Container -->
-                        <div id="counter-carousel" class="splide slider-no-arrows " aria-label="Testimonials">
+                        <div id="counter-carousel" class="splide slider-no-arrows">
                             <div class="splide__track">
                                 <ul class="splide__list">
                                     <!-- slide 1 -->
@@ -351,7 +351,7 @@
                                 <div class="col-lg-9">
                                     <div class="d-flex flex-column p-2">
                                         <!-- Splide Container -->
-                                        <div id="testimonial-carousel" class="splide slider-no-arrows slider-dots-round slider-pagination-top-right position-static" aria-label="Testimonials">
+                                        <div id="testimonial-carousel" class="splide slider-no-arrows slider-dots-round slider-pagination-top-right position-static">
                                             <div class="splide__track">
                                                 <ul class="splide__list">
                                                     <!-- slide 1 -->
