--- a/src/home-five.html
+++ b/src/home-five.html
@@ -179,8 +179,8 @@
                 <div class="row h-100">
                     <div class="col-lg-6 d-flex flex-column">
                         <div class="d-flex my-auto flex-column">
-                            <h1 class="text-white display6-size fw-500 lh-1" data-aos="fade-up" data-aos-duration="400" data-aos-duration="400" data-delay="200">Ready to transform your financial life</h1>
-                            <p class="fw-400 text-gray-300 lh-28 pe-lg-5 w-lg-75 mt-0 mb-3 py-lg-3" data-aos="fade-up" data-aos-duration="400" data-aos-duration="400" data-delay="300">When you join our journey, you are choosing a partner who believes in a healthier, more balanced you. When you join our journey. Quizzes are working for them — and they can for you too. or a modern web app gives you full control.</p>
+                            <h1 class="text-white display6-size fw-500 lh-1" data-aos="fade-up" data-aos-duration="400" data-delay="200">Ready to transform your financial life</h1>
+                            <p class="fw-400 text-gray-300 lh-28 pe-lg-5 w-lg-75 mt-0 mb-3 py-lg-3" data-aos="fade-up" data-aos-duration="400"  data-delay="300">When you join our journey, you are choosing a partner who believes in a healthier, more balanced you. When you join our journey. Quizzes are working for them — and they can for you too. or a modern web app gives you full control.</p>
                             <div class="d-flex flex-sm-row flex-column gap-sm-3 gap-2 pb-0">
                                 <a href="#" data-aos="zoom-in" data-aos-duration="400" data-delay="400" class="btn bg-green btn-lg rounded-2 px-4 text-white mb-1 btn-hover-bg-lighten-green border-0">
                                     <span>Start trial for 14 days</span>
