--- a/src/home-four.html
+++ b/src/home-four.html
@@ -251,7 +251,7 @@
                 </div>
                 <div class="row gy-4">
                     <div class="col-lg-8" data-aos="fade-up" data-aos-duration="500" data-aos-delay="0">
-                        <div id="counter-carousel" class="splide slider-no-arrows " aria-label="Testimonials">
+                        <div id="counter-carousel" class="splide slider-no-arrows">
                             <div class="splide__track">
                                 <ul class="splide__list">
                                     <!-- slide 1 -->
@@ -315,7 +315,7 @@
                 <div class="row gy-5 py-lg-4">
                     <div class="col-12">
                         <!-- Splide Container -->
-                        <div id="autoscroll-carousel" class="splide slider-no-arrows slider-no-dots slider-pagination-top-right position-static mb-3" aria-label="Testimonials">
+                        <div id="autoscroll-carousel" class="splide slider-no-arrows slider-no-dots slider-pagination-top-right position-static mb-3">
                             <div class="splide__track">
                                 <ul class="splide__list">
                                     <!-- slider -->
@@ -565,7 +565,7 @@
                     <div class="row">
                         <div class="col-12">
                             <!-- Splide Carousel -->
-                            <div id="feedback-carousel" class="splide slider-dots-line splide-pagination-bottom slider-arrows-outside" aria-label="feedback Splide">
+                            <div id="feedback-carousel" class="splide slider-dots-line splide-pagination-bottom slider-arrows-outside">
                                 <div class="splide__track">
                                     <div class="splide__list">
                                         <div class="splide__slide">
