--- a/src/home-three.html
+++ b/src/home-three.html
@@ -664,7 +664,7 @@
                             <img loading="lazy" src="images/icon-1.png" alt="icon" data-aos="zoom-in" data-aos-delay="0" data-aos-duration="400">
                         </div>
                         <div class="col-lg-10 pt-lg-0 pt-4" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="400">
-                            <div id="testimonial-carousel" class="splide slider-arrows-cyan slider-no-dots" aria-label="Testimonials">
+                            <div id="testimonial-carousel" class="splide slider-arrows-cyan slider-no-dots">
                                 <div class="splide__track">
                                     <ul class="splide__list">
                                         <!-- slide 1 -->
