--- a/src/home-two.html
+++ b/src/home-two.html
@@ -218,7 +218,7 @@
             <div class="row justify-content-center pb-65">
                 <div class="col-12 brand-carousel">
                     <!-- Splide Container -->
-                    <div id="autoscroll-carousel" class="splide slider-no-arrows slider-no-dots slider-pagination-top-right position-static mb-3" aria-label="Testimonials">
+                    <div id="autoscroll-carousel" class="splide slider-no-arrows slider-no-dots slider-pagination-top-right position-static mb-3">
                         <div class="splide__track">
                             <ul class="splide__list">
                                 <!-- slider -->
@@ -341,7 +341,7 @@
                 </div>
                 <div class="row g-4 pb-65">
                     <div class="col-lg-8" data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">
-                        <div id="counter-carousel" class="splide slider-no-arrows " aria-label="Testimonials">
+                        <div id="counter-carousel" class="splide slider-no-arrows">
                             <div class="splide__track">
                                 <ul class="splide__list">
                                     <!-- slide 1 -->
@@ -826,7 +826,7 @@
                 <div class="row" >
                     <div class="col-12">
                         <!-- Splide Carousel -->
-                        <div id="feedback-carousel" class="splide slider-dots-line splide-pagination-bottom slider-arrows-white" aria-label="feedback Splide">
+                        <div id="feedback-carousel" class="splide slider-dots-line splide-pagination-bottom slider-arrows-white">
                             <div class="splide__track">
                                 <div class="splide__list">
                                     <!-- slider 1 -->
