--- a/src/home-four.html
+++ b/src/home-four.html
@@ -26,6 +26,13 @@
 </head>
 
 <body>
+    <!-- preloader -->
+    <div class="preloader">
+        <div class="loading-container">
+            <div class="loading"></div>
+        </div>
+    </div>
+    <!-- preloader -->
     
     <!-- main wrapper -->
     <div id="page" >
